July 27, 2005
  - Fix up some automake incorrectnesses that old versions of AM let slide.
    This is part of an effort to port to Cygwin.
  - Fix up issues with the definition of PAGESIZE in Xamine (Display subdir)
    That make it not build correctly on CYGWIN.
August 16, 2005
  - Add support to scripted readout for caenv1785 adc (primitive).
September 2, 2005
  - Added support for 2d long spectra.
September 22, 2005
  - Fix defect in Gamma 2d increment:  If no valid parameters are left,
    the outer loop limits are very very bad.
  - Forward port the inclusion of bitmask gates 
  - Support dynamic creation of treeparameters.
  - Document treeparameter -create command in online user guide.
September 30, 2005  - Happy Birthday Ron: 48
  - Add -listnew to treeparameter command so that new gui can
    figure out which parameters have been created since program
    started ... and save them.
October 5, 2005
  - Retry select in pipe data source in case of EINTR.
  - Add attach -list to support determination of event source.
October 7, 2005
  - Fix defects in eventsink pipeline add/delete code.  Predicates
    not constructed correctly.
October 17, 2005
  - Add the new browser based GUI to the system.
October 18, 2005
  - Add fix for defect 188 - grobj files need to specify spectra by name.
October 21, 2005
  - Fix error in old tree gui handling of old list mode save files:
    treeparameter -set was invoked with the wrong number of parameters.
October 24, 2005
  - Fix error in old tree gui:  Saving list mode files treeparameterList
    was missing a $ when being appended to the list of lists...so no modified
    treeparameters were saved.
October 31, 2005
  - Fix buffer overflow problem in griprint.cc found by D. Caussyn.
November 29, 2005
  - Put spectrum names in integrations (and hence in logfiles), rather
    than slot numbers
  - Defect 174 - Make +/- buttons kick out of autoscale.
  - Defect 162 - Document user's obligation to delete buffer
    translators.