@@ -383,3 +383,6 @@ November 29, 2005
   - Defect 174 - Make +/- buttons kick out of autoscale.
   - Defect 162 - Document user's obligation to delete buffer
     translators.
+Decemberr 19, 2005
+  - Remove illegal default parameter from PointlistGate.h's InGate with
+    parameters.
